# QnDrawer

./: .gitignore  .rootrc  CMakeLists.txt  Cent10_PID14_vn_clean_systematic_ver1218.root  README.md  points.cxx  projection.cpp
Painter/: Compare_with_Bk.cpp  DrawFwBw.C  DrawMidrapidity.C  SetStyle.h
QnDrawer/: Comparator.cpp  ConfigureFlow.cpp  Container.cpp  FlowBuilder.cpp  FlowConfiguration.cpp  FlowHelper.cpp  Method.cpp  MethodRs.cpp  Observable.cc  Observed.cpp  Painter.cc  Painter.cpp  QnDrawerLinkDef.h  SubEvent.cpp  Systematics.cpp  comparator.cc  correlation_mananger.cc  file_manager.cc  flow_builder.cc  flow_configuration.cc  flow_helper.cc  method.cc  observable.cc  painter.cc  systematics.cc
QnDrawer/include/: Comparator.h  Container.h  CorrelationMananger.h  FlowBuilder.h  FlowConfiguration.h  FlowHelper.h  Method.h  Method3Se.h  MethodRs.h  Observable.h  Observed.h  Painter.h  SetStyle.h  SubEvent.h  Systematics.h  comparator.h  correlation_mananger.h  file_manager.h  flow_builder.h  flow_configuration.h  flow_helper.h  observable.h  painter.h  systematics.h
Scripts/: CompareSectors.cpp  Configure.cpp  run_diff_ycm_gaps.sh
macro/: MethodRatio.cxx
src/: BuildFlow.cpp  BuildSystematics.cpp  CompareFlow.cpp  CompareResolution.cpp  ConfigureFlow.cpp  Container.cpp  Container.h  CorrelationHelper.cxx  CorrelationHelper.h  CorrelationMananger.cpp  CorrelationMananger.h  Flow.cxx  Flow.h  FlowConfiguration.h  Method.h  Method3Se.cpp  Method3Se.h  MethodRs.h  SubEvent.h  build_flow.cc  build_sectors.cc  build_systematics.cc  compare_flow.cc  compare_resolution.cc  configure_flow.cc  draw_sectors.cc  draw_systematics.cc  flow.cpp  main.cpp
